feat(playlist): add simple frontend
